# Windows-Use

./: .env-example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPROVEMENTS_SUMMARY.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: ci.yml  pre-commit.yml
docs/: EXAMPLES.md  TROUBLESHOOTING.md
docs/functions/: AccNotifyTouchInteraction.md  AccSetRunningUtilityState.md  AccessibleObjectFromEvent.md  AddFocusChangedEventHandler.md  CoCreateLocally.md  ElementProviderFromPoint.md  GetAdjacentFragment.md  GetPropertyValue.md  GetRuntimeId.md  GetRuntimeIdPrefix.md  LocalInit.md  SetWinEventHook.md  UiaHostProviderFromHwnd.md  accDoDefaultAction.md  accHitTest.md  accLocation.md  accNavigate.md  get_DropTargetEffect.md  get_HostRawElementProvider.md  get_ToggleState.md  get_accChild.md  get_accDefaultAction.md  get_accDescription.md  get_accFocus.md  get_accHelp.md  get_accName.md  get_accRole.md  get_accSelection.md  get_accState.md
docs/interfaces/: IUIAutomation.md
docs/structures/: MSAAMENUINFO.md
tests/: test_agent_startup.py  test_imports.py  test_uia_caching_integration.py  test_uia_implementation.py  test_uia_init.py
tests/integration/: __init__.py  test_agent_integration.py
tests/performance/: __init__.py  test_performance.py
tests/unit/: test_llm_events.py  test_openai_events.py
tests/unit/agent/: test_agent_service.py  test_agent_utils.py  test_agent_views.py
tests/unit/desktop/: test_desktop_config.py  test_desktop_init.py  test_desktop_views.py
tests/unit/tree/: test_tree_config.py  test_tree_init.py  test_tree_utils.py  test_tree_views.py
windows_use/: __init__.py  exceptions.py  logging.py  performance.py
windows_use/agent/: __init__.py  base.py  loop.py  service.py  views.py
windows_use/agent/context/: service.py
windows_use/agent/desktop/: config.py  service.py  views.py
windows_use/agent/events/: __init__.py  service.py
windows_use/agent/prompt/: observation.md  service.py  system.md
windows_use/agent/registry/: service.py  views.py
windows_use/agent/tools/: __init__.py  app.py  click.py  command.py  drag.py  move.py  scroll.py  service.py  shell.py  shortcut.py  type.py  views.py  wait.py
windows_use/agent/tree/: cache_utils.py  config.py  service.py  utils.py  views.py
windows_use/agent/watchdog/: event_handlers.py  service.py
windows_use/cli/: __main__.py  config.py  registry.py  setup.py  speech_registry.py  subscriber.py
windows_use/computer/desktop/: __init__.py  config.py  service.py  types.py
windows_use/computer/tree/: __init__.py  cache_utils.py  config.py  service.py  types.py
windows_use/computer/watchdog/: event_handlers.py
windows_use/desktop/: __init__.py
windows_use/engine/: __init__.py  service.py  types.py
windows_use/hooks/: __init__.py  service.py  types.py
windows_use/inference/: __init__.py  types.py
windows_use/inference/model/: registry.py  types.py
windows_use/inference/provider/: registry.py  types.py
windows_use/llms/: base.py
windows_use/message/: types.py  utils.py
windows_use/messages/: __init__.py  service.py
windows_use/providers/: __init__.py  base.py  events.py  views.py
windows_use/providers/anthropic/: llm.py
windows_use/providers/azure_openai/: llm.py
windows_use/providers/cerebras/: __init__.py  llm.py
windows_use/providers/deepgram/: stt.py  tts.py
windows_use/providers/deepseek/: llm.py
windows_use/providers/elevenlabs/: stt.py  tts.py
windows_use/providers/google/: __init__.py  llm.py  stt.py  tts.py
windows_use/providers/groq/: __init__.py  llm.py  stt.py  tts.py
windows_use/providers/litellm/: llm.py
windows_use/providers/mistral/: __init__.py  llm.py
windows_use/providers/nvidia/: llm.py
windows_use/providers/ollama/: __init__.py  llm.py
windows_use/providers/open_router/: llm.py
windows_use/providers/openai/: llm.py  stt.py  tts.py
windows_use/providers/perplexity/: llm.py
windows_use/speech/: service.py
windows_use/telemetry/: service.py  views.py
windows_use/tool/: types.py
windows_use/tools/: __init__.py  service.py
windows_use/tree/: __init__.py  views.py
windows_use/uia/: controls.py  core.py  enums.py  exceptions.py  patterns.py
windows_use/vdm/: core.py
(+50 files in other folders)
